// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timepicker renders a disabled state 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label"
    htmlFor="example-unique-id-15"
    id="combobox-label-id-8"
  >
    Time
  </label>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-combobox_container"
    >
      <div
        className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-timepicker"
      >
        <div
          className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
          role="none"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="example-unique-id-16"
            aria-expanded="false"
            aria-haspopup="listbox"
            autoComplete="off"
            className="slds-input slds-combobox__input"
            defaultValue=""
            disabled={true}
            id="example-unique-id-15"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Select a time…"
            role="combobox"
            type="text"
          />
          <span
            className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default slds-is-disabled"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
              />
            </svg>
          </span>
        </div>
        <div
          aria-orientation={null}
          className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
          id="example-unique-id-16"
          role="listbox"
        >
          <ul
            className="slds-listbox slds-listbox_vertical"
            role="presentation"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option1"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="7:00am"
                  >
                    7:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option2"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="8:00am"
                  >
                    8:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option3"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="9:00am"
                  >
                    9:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option4"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="10:00am"
                  >
                    10:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option5"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="11:00am"
                  >
                    11:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option6"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="12:00pm"
                  >
                    12:00pm
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timepicker renders a listbox 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label"
    htmlFor="example-unique-id-5"
    id="combobox-label-id-3"
  >
    Time
  </label>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-combobox_container"
    >
      <div
        className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open slds-timepicker"
      >
        <div
          className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
          role="none"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="example-unique-id-6"
            aria-expanded="true"
            aria-haspopup="listbox"
            autoComplete="off"
            className="slds-input slds-combobox__input slds-has-focus"
            defaultValue=""
            id="example-unique-id-5"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Select a time…"
            role="combobox"
            type="text"
          />
          <span
            className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
              />
            </svg>
          </span>
        </div>
        <div
          aria-orientation={null}
          className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
          id="example-unique-id-6"
          role="listbox"
        >
          <ul
            className="slds-listbox slds-listbox_vertical"
            role="presentation"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option1"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="7:00am"
                  >
                    7:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected="true"
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small slds-has-focus"
                id="option2"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="8:00am"
                  >
                    8:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option3"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="9:00am"
                  >
                    9:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option4"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="10:00am"
                  >
                    10:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option5"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="11:00am"
                  >
                    11:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option6"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="12:00pm"
                  >
                    12:00pm
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timepicker renders a listbox with a selected item 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label"
    htmlFor="example-unique-id-7"
    id="combobox-label-id-4"
  >
    Time
  </label>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-combobox_container"
    >
      <div
        className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open slds-timepicker"
      >
        <div
          className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
          role="none"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="example-unique-id-8"
            aria-expanded="true"
            aria-haspopup="listbox"
            autoComplete="off"
            className="slds-input slds-combobox__input slds-has-focus"
            defaultValue=""
            id="example-unique-id-7"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Select a time…"
            role="combobox"
            type="text"
          />
          <span
            className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
              />
            </svg>
          </span>
        </div>
        <div
          aria-orientation={null}
          className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
          id="example-unique-id-8"
          role="listbox"
        >
          <ul
            className="slds-listbox slds-listbox_vertical"
            role="presentation"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option1"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="7:00am"
                  >
                    7:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked="true"
                aria-disabled={null}
                aria-selected="true"
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small slds-is-selected slds-has-focus"
                id="option2"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-check slds-current-color"
                    title={null}
                  >
                    <svg
                      aria-hidden={true}
                      className="slds-icon slds-icon_x-small"
                    >
                      <use
                        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#check"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="8:00am"
                  >
                    8:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option3"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="9:00am"
                  >
                    9:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option4"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="10:00am"
                  >
                    10:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option5"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="11:00am"
                  >
                    11:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option6"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="12:00pm"
                  >
                    12:00pm
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timepicker renders base state 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label"
    htmlFor="example-unique-id-1"
    id="combobox-label-id-1"
  >
    Time
  </label>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-combobox_container"
    >
      <div
        className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-timepicker"
      >
        <div
          className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
          role="none"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="example-unique-id-2"
            aria-expanded="false"
            aria-haspopup="listbox"
            autoComplete="off"
            className="slds-input slds-combobox__input"
            defaultValue=""
            id="example-unique-id-1"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Select a time…"
            role="combobox"
            type="text"
          />
          <span
            className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
              />
            </svg>
          </span>
        </div>
        <div
          aria-orientation={null}
          className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
          id="example-unique-id-2"
          role="listbox"
        >
          <ul
            className="slds-listbox slds-listbox_vertical"
            role="presentation"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option1"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="7:00am"
                  >
                    7:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option2"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="8:00am"
                  >
                    8:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option3"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="9:00am"
                  >
                    9:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option4"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="10:00am"
                  >
                    10:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option5"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="11:00am"
                  >
                    11:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option6"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="12:00pm"
                  >
                    12:00pm
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timepicker renders error state 1`] = `
Array [
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="example-unique-id-11"
      id="combobox-label-id-6"
    >
      Time
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-combobox_container"
      >
        <div
          className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-timepicker slds-has-error"
        >
          <div
            className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
            role="none"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="example-unique-id-12"
              aria-expanded="false"
              aria-haspopup="listbox"
              autoComplete="off"
              className="slds-input slds-combobox__input"
              defaultValue=""
              id="example-unique-id-11"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Select a time…"
              role="combobox"
              type="text"
            />
            <span
              className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
              title={null}
            >
              <svg
                aria-hidden={true}
                className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default slds-icon-text-error"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
                />
              </svg>
            </span>
          </div>
          <div
            aria-orientation={null}
            className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
            id="example-unique-id-12"
            role="listbox"
          >
            <ul
              className="slds-listbox slds-listbox_vertical"
              role="presentation"
            >
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option1"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="7:00am"
                    >
                      7:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option2"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="8:00am"
                    >
                      8:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option3"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="9:00am"
                    >
                      9:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option4"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="10:00am"
                    >
                      10:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option5"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="11:00am"
                    >
                      11:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option6"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="12:00pm"
                    >
                      12:00pm
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="slds-form-element__help"
    id="example-unique-id-11-error"
  >
    Complete this field.
  </div>,
]
`;

exports[`Timepicker renders focus state 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label"
    htmlFor="example-unique-id-3"
    id="combobox-label-id-2"
  >
    Time
  </label>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-combobox_container"
    >
      <div
        className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open slds-timepicker"
      >
        <div
          className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
          role="none"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="example-unique-id-4"
            aria-expanded="true"
            aria-haspopup="listbox"
            autoComplete="off"
            className="slds-input slds-combobox__input slds-has-focus"
            defaultValue=""
            id="example-unique-id-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Select a time…"
            role="combobox"
            type="text"
          />
          <span
            className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
              />
            </svg>
          </span>
        </div>
        <div
          aria-orientation={null}
          className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
          id="example-unique-id-4"
          role="listbox"
        >
          <ul
            className="slds-listbox slds-listbox_vertical"
            role="presentation"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option1"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="7:00am"
                  >
                    7:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option2"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="8:00am"
                  >
                    8:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option3"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="9:00am"
                  >
                    9:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option4"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="10:00am"
                  >
                    10:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option5"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="11:00am"
                  >
                    11:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option6"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="12:00pm"
                  >
                    12:00pm
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timepicker renders required plus error state 1`] = `
Array [
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="example-unique-id-13"
      id="combobox-label-id-7"
    >
      <abbr
        className="slds-required"
        title="required"
      >
        *
         
      </abbr>
      Time
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-combobox_container"
      >
        <div
          className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-timepicker slds-has-error"
        >
          <div
            className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
            role="none"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="example-unique-id-14"
              aria-expanded="false"
              aria-haspopup="listbox"
              autoComplete="off"
              className="slds-input slds-combobox__input"
              defaultValue=""
              id="example-unique-id-13"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Select a time…"
              role="combobox"
              type="text"
            />
            <span
              className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
              title={null}
            >
              <svg
                aria-hidden={true}
                className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default slds-icon-text-error"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
                />
              </svg>
            </span>
          </div>
          <div
            aria-orientation={null}
            className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
            id="example-unique-id-14"
            role="listbox"
          >
            <ul
              className="slds-listbox slds-listbox_vertical"
              role="presentation"
            >
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option1"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="7:00am"
                    >
                      7:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option2"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="8:00am"
                    >
                      8:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option3"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="9:00am"
                    >
                      9:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option4"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="10:00am"
                    >
                      10:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option5"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="11:00am"
                    >
                      11:00am
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="slds-listbox__item"
                role="presentation"
              >
                <div
                  aria-checked={null}
                  aria-disabled={null}
                  aria-selected={null}
                  className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                  id="option6"
                  role="option"
                >
                  <span
                    className="slds-media__figure slds-listbox__option-icon"
                  />
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="12:00pm"
                    >
                      12:00pm
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="slds-form-element__help"
    id="example-unique-id-13-error"
  >
    Complete this field.
  </div>,
]
`;

exports[`Timepicker renders required state 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label"
    htmlFor="example-unique-id-9"
    id="combobox-label-id-5"
  >
    <abbr
      className="slds-required"
      title="required"
    >
      *
       
    </abbr>
    Time
  </label>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-combobox_container"
    >
      <div
        className="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-timepicker"
      >
        <div
          className="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
          role="none"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="example-unique-id-10"
            aria-expanded="false"
            aria-haspopup="listbox"
            autoComplete="off"
            className="slds-input slds-combobox__input"
            defaultValue=""
            id="example-unique-id-9"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Select a time…"
            role="combobox"
            type="text"
          />
          <span
            className="slds-icon_container slds-icon-utility-clock slds-input__icon slds-input__icon_right"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#clock"
              />
            </svg>
          </span>
        </div>
        <div
          aria-orientation={null}
          className="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid"
          id="example-unique-id-10"
          role="listbox"
        >
          <ul
            className="slds-listbox slds-listbox_vertical"
            role="presentation"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option1"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="7:00am"
                  >
                    7:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option2"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="8:00am"
                  >
                    8:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option3"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="9:00am"
                  >
                    9:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option4"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="10:00am"
                  >
                    10:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option5"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="11:00am"
                  >
                    11:00am
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-checked={null}
                aria-disabled={null}
                aria-selected={null}
                className="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                id="option6"
                role="option"
              >
                <span
                  className="slds-media__figure slds-listbox__option-icon"
                />
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="12:00pm"
                  >
                    12:00pm
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
